fix issue with codeql building job
Signed-off-by: Mohab Mohie <Mohab.MohieElDeen@outlook.com>